# RestaurantWebsite_frontend_backend

./: db.sqlite3  pyproject.toml
restaurant/: settings.py  urls.py
restaurantfront/: package-lock.json  package.json  tailwind.config.js
restaurantfront/public/: index.html
restaurantfront/src/: App.css  App.jsx  index.css
restaurantfront/src/components/: About.jsx  Admin.jsx  Book.jsx  BookingAccess.jsx  CreateItem.jsx  Delivery.jsx  EditMenu.jsx  EditProfile.jsx  Footer.jsx  Header.jsx  Hero.jsx  Login.jsx  Reviews.jsx  Services.jsx  Users.jsx
restaurantfront/src/pages/: About.jsx  Menu.jsx  Profile.jsx  Register.jsx
restaurantfront/src/pages/Admin/: Admin.jsx  Bookings.jsx
restaurantfront/src/pages/Home/: Delivery.jsx  Hero.jsx  Home.jsx  Services.jsx
system/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
system/migrations/: 0001_initial.py  0002_alter_profile_phone.py  0003_booking_phone.py  0004_alter_profile_phone.py  0005_remove_menuitem_unique_product_name_and_more.py  0006_delete_profile.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
